--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_mobx: ^2.0.6+5
   mobx: ^2.2.0
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
